test/regress/coverage-unexpected-char.test
; Coverage test for textual_xacts.cc
; Unexpected character after posting amount triggers error

2024/01/01 Test
    Expenses:Food            $10.00 xyz
    Assets:Cash

test bal -> 1
__ERROR__
While parsing file "$FILE", line 5:
While parsing posting:
  Expenses:Food            $10.00 xyz
                           ^^^^^^^^^^
Error: Unexpected char 'x' (Note: inline math requires parentheses)
end test
